# Signify

./: GameTyping.pro  README.md  Signify.pro  Signify_en_SG.ts  camaradetection.cpp  cannonball.cpp  cannonball.h  enemyword.cpp  enemyword.h  font.qrc  gamewidget.cpp  gamewidget.h  gamewindowlabel.cpp  gamewindowlabel.h  homepage.cpp  homepage.h  icons.qrc  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  model.py  recordwidget.cpp  recordwidget.h  sounds.qrc  studywidget.cpp  studywidget.h  welcome.cpp  welcome.h
include/core/: cannonball.h  enemyword.h  gamewidget.h  gamewindowlabel.h  homepage.h  mainwindow.h  recordwidget.h  studywidget.h  welcome.h
include/utils/: datareceiver.h  tcpserver.h
resources/: fonts.qrc  icons.qrc  images.qrc  sounds.qrc
src/: main.cpp
src/core/: cannonball.cpp  enemyword.cpp  gamewidget.cpp  gamewindowlabel.cpp  homepage.cpp  mainwindow.cpp  recordwidget.cpp  studywidget.cpp  welcome.cpp
src/utils/: datareceiver.cpp  tcpserver.cpp
train10/: args.yaml  results.csv
user_record/: CMakeLists.txt  main.cpp  resources.qrc  widget.cpp  widget.h
